# 99_SimCity

./: .gitignore  PLAN_001.md  README.md  TODO.md  app.py  pyproject.toml  requirements.txt
data/: README.md
scripts/: aggregate_h3_timeslices.py  downsample_residents.py  filter_forbidden_cells.py  generate_residents.py  prepare_poi.py  render_denylist_preview.py  simulate_movement.py
simcity/: __init__.py  config.py  geography.py  h3util.py  poi.py  schedules.py  water.py
